--- a/package.json
+++ b/package.json
@@ -116,10 +116,9 @@
     "framer-motion": "^12.12.1",
     "frappe-gantt": "^1.0.4",
     "hast-util-to-html": "^9.0.5",
-    "html2canvas-pro": "^1.5.13",
-    "html2pdf.js": "^0.12.1",
     "image-meta": "^0.2.2",
     "import-in-the-middle": "^2.0.0",
+    "jspdf": "^4.0.0",
     "juice": "^11.0.3",
     "katex": "^0.16.22",
     "lodash-es": "^4.17.21",
@@ -151,6 +150,7 @@
     "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
     "require-in-the-middle": "^8.0.1",
+    "snapdom": "^0.1.2",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.0",
