--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "docx": "^9.5.1",
+    "emojibase-data": "^17.0.0",
     "file-saver": "^2.0.5",
     "file-type": "^21.0.0",
     "framer-motion": "^12.12.1",
@@ -157,6 +158,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-export-docx": "^0.0.9",
     "ua-parser-js": "^2.0.4",
+    "unicode-emoji-utils": "^1.3.1",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
