--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "docx": "^9.5.1",
+    "emojibase-data": "^17.0.0",
     "file-saver": "^2.0.5",
     "file-type": "^21.0.0",
     "framer-motion": "^12.12.1",
