--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
+    "dev": "next dev",
     "build": "next build",
     "build:analyze": "ANALYZE=true next build",
     "analyze": "ANALYZE=true pnpm build",
@@ -131,7 +131,7 @@
     "mdast-util-gfm": "^3.1.0",
     "micromark-extension-gfm": "^3.0.0",
     "nanoid": "^5.1.5",
-    "next": "16.0.10",
+    "next": "16.1.1",
     "ofetch": "^1.5.1",
     "pdfjs-dist": "^5.4.149",
     "plyr": "^3.7.8",
@@ -172,7 +172,7 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3.3.1",
-    "@next/bundle-analyzer": "16.0.7",
+    "@next/bundle-analyzer": "16.1.1",
     "@playwright/test": "^1.51.1",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/typography": "^0.5.16",
@@ -197,7 +197,7 @@
     "commitizen": "^4.3.1",
     "cz-git": "^1.11.1",
     "eslint": "9.27.0",
-    "eslint-config-next": "16.0.7",
+    "eslint-config-next": "16.1.1",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
